[package]
name = "dmx-termios"
version = "0.3.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "A vendored fork of the termios library."
license = "MIT"
homepage = "https://github.com/mbr/termios-rs"
repository = "https://github.com/mbr/termios-rs"
documentation = "http://docs.rs/dmx-termios"
readme = "README.md"

[dependencies]
libc = "0.2"
ioctl-rs = "0.1.5"
